@@ -61,6 +61,7 @@
 <a href="CoreTasks/taskdef.html">Taskdef</a><br>
 <a href="CoreTasks/touch.html">Touch</a><br>
 <a href="CoreTasks/tstamp.html">Tstamp</a><br>
+<a href="CoreTasks/typedef.html">Typedef</a><br>
 <a href="CoreTasks/unzip.html">Unjar</a><br>
 <a href="CoreTasks/untar.html">Untar</a><br>
 <a href="CoreTasks/unzip.html">Unwar</a><br>
