@@ -21,7 +21,8 @@ Changes that could break older environments:
 Other changes:
 --------------
 
-* New tasks: ear, p4counter, record, cvspass, vsscheckin, vsscheckout
+* New tasks: ear, p4counter, record, cvspass, vsscheckin, vsscheckout,
+  typedef
 
 * Ant now uses JAXP 1.1
 
